fix z-index problem

--- a/src/Umbraco.Web.UI.Client/src/less/components/editor.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/editor.less
@@ -66,7 +66,7 @@
 	background: @white;
 	position: absolute;
 	padding: 0 20px;
-	z-index: @zindexFixedNavbar;
+	z-index: @zIndexEditor;
 	border-bottom: 1px solid @gray-9;
 	width: 100%;
 	box-sizing: border-box;
